# Mini-Exchange-Portfolio-System

./: AI_USAGE.md  Cargo.toml  README.md  docker-compose.yml  test_integration.sh
migrations/: 001_init.sql  002_seed.sql
services/audit/: Cargo.toml  Dockerfile
services/audit/src/: config.rs  handlers.rs  main.rs
services/market/: Cargo.toml  Dockerfile
services/market/src/: config.rs  error.rs  handlers.rs  main.rs  price_store.rs
services/portfolio/: Cargo.toml  Dockerfile
services/portfolio/src/: config.rs  db.rs  error.rs  handlers.rs  main.rs  market_client.rs  order.rs
shared/: Cargo.toml
shared/src/: errors.rs  events.rs  lib.rs  models.rs
