[package]
name = "audit"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "audit"
path = "src/main.rs"

[dependencies]
shared = { path = "../../shared" }

tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
futures-util = "0.3"
