[package]
name = "market"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "market"
path = "src/main.rs"

[dependencies]
shared = { path = "../../shared" }

tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
redis = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
